<resources>
    <string name="app_name">Final B-rush Admin</string>

    <string name="open_navbar">Open Navigation Bar</string>
    <string name="close_navbar">Close Navigation Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Admin_Dashboard">Admin Dashboard</string>
    <string name="route_1">Route 1</string>
    <string name="Overview">Overview</string>
    <string name="pdf_icon">PDF_icon</string>
    <string name="excel_icon">Excel_icon</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="book_bus">Book Bus</string>
    <string name ="google_maps_key">Google Maps Key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_map">Map</string>

    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_forgot">FORGOT PASSWORD</string>
    <string name="button_login">LOGIN</string>

</resources>