<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/Admin_Dashboard"
                android:textColor="#850808"
                android:textSize="26sp"
                android:textStyle="bold"
                android:translationY="35dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/route_1"
                android:textStyle="bold"
                android:textColor="#850808"
                android:textSize="18sp"
                android:translationY="40dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/Overview"
                android:textColor="#850808"
                android:textSize="14sp"
                android:translationY="40dp" />

            <ImageView
                android:id="@+id/exportPDF"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/pdf_icon"
                android:src="@drawable/pdf_icon"
                android:translationX="270dp"
                android:translationY="20dp" />

            <ImageView
                android:id="@+id/exportEXCEL"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/excel_icon"
                android:src="@drawable/excel_icon"
                android:translationX="310dp"
                android:translationY="-15dp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/mp_groupBarChart"
                android:layout_width="330dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="490dp"
                android:layout_marginBottom="55dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>